--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 /* generic */
-#img-container > img{
+#img-container > div {
     height: 100%;
     width: 100%;
     display: none;
 }
 
+#img-container > .image-wrapper{
+    width: 100%;
+    height: 100%;
+} 
 
+.image-wrapper img{
+    width: 100%;
+    height: 100%;
+}
 
 #carousel{
     
@@ -50,7 +58,7 @@
     height: 100%;
 }
 
-#img-container > img.active{
+#img-container > div.active{
     display: block;
 }
 
@@ -63,7 +71,7 @@
     justify-content: space-between;
 
 }
-#thumbnail > img{
+#thumbnail > div{
     margin-top: 5px;
     filter: grayscale(1);
     border-radius: 15px;
@@ -71,7 +79,11 @@
     height: 100%;
 }
 
-#thumbnail > img.active{
+#thumbnail img{
+    border-radius: 15px;
+}
+
+#thumbnail > div.active{
 
     filter: grayscale(0);
     box-shadow: 0 0 5px 0 darkblue;
