--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 #img-container > .image-wrapper{
     width: 100%;
     height: 100%;
+    position: relative;
 } 
 
 .image-wrapper img{
@@ -15,17 +16,33 @@
     height: 100%;
 }
 
+.image-wrapper > .image-description{
+    color: #fff;
+    position: absolute;
+    right: 0;
+    top: 0;
+    max-width: 70%;
+    
+}
+.image-description > h2{
+    padding-right: 1rem;
+    text-align: end;
+}
+.image-description > p{
+    padding-right: 1rem;
+    text-align: end;
+}
+
+
 #carousel{
     
     height: 500px;
     width: 900px;
     margin: 50px auto ;
-    
-    
-    
     position: relative;
 }
-
+    
+    
 .bi{
     
     
@@ -88,3 +105,4 @@
     filter: grayscale(0);
     box-shadow: 0 0 5px 0 darkblue;
 }
+    
